--- a/posts/Mataji Devaki Ma's reply.qmd
+++ b/posts/Mataji Devaki Ma's reply.qmd
@@ -5,7 +5,7 @@ date: "2021-06-05"
 categories: [Leelas, Inner transformation]
 ---
 
-Once when the Sudhama sisters went to Sannadhi street house, Bhagavan asked them how many sisters they had. Mataji Devaki Ma said with pride, all are my brothers and sisters. That is how Mataji  wanted to live her life. Bhagavan saw Ma her intently and then became silent. One by one spiritual ministry continued. Then Bhagavan started talking about Ma's family and he enquired how many brothers/ sisters does Ma have.Ma told the number of borthers and sisters she had in the family. Ma realised that how when you have the thoughts of family occupy the mind and act as a hindrance for the higher ambitions of life.
+Once when the Sudhama sisters went to Sannadhi street house, Bhagavan asked them how many sisters they had. Mataji Devaki Ma said with pride, all are my brothers and sisters. That is how Mataji  wanted to live her life. Bhagavan saw Ma her intently and then became silent. One by one spiritual ministry continued. Then Bhagavan started talking about Ma's family and he enquired how many brothers/ sisters does Ma have.Ma told the number of brothers and sisters she had in the family. Ma realised that how when you have the thoughts of family occupy the mind and act as a hindrance for the higher ambitions of life.
 
 Please visit this [link](https://www.youtube.com/watch?v=TZMB_qUaGTE
 ) for the satsang.
