--- a/posts/Arunachaleshwara Temple Tank.qmd
+++ b/posts/Arunachaleshwara Temple Tank.qmd
@@ -1,8 +1,9 @@
 ---
-title: Arunachaleshwara Temple Tank
+title: 71 - Arunachaleshwara Temple Tank
 author: NA
 date: "07/01/2020"
 categories: [Temple]
 ---
 Bhagwan highlighted to the Temple Authorities how the local people took bath, washed clothes and caught fish from the Temple Tank. With Bhagwan's blessings, Shri. Ramdas, Commissioner of Hindu Endowments escalated this to the higher officials. A law was since brought into force to the effect of banning such activities in any Temple Tank across Tamilnadu. The law is in force until this day.
- Please follow the [link](https://youtu.be/pw6zlcrN77A?si=KSjoBjADtunYS-NF) for the satsang in youtube.
+ 
+Please follow the [link](https://youtu.be/pw6zlcrN77A?si=KSjoBjADtunYS-NF) for the satsang in youtube.
