--- a/posts/Chariot incident at Thiruvannamalai.qmd
+++ b/posts/Chariot incident at Thiruvannamalai.qmd
@@ -1,8 +1,9 @@
 ---
-title: Chariot incident at Thiruvannamalai
+title: 70 - Chariot incident at Thiruvannamalai
 author: NA
 date: "07/01/2020"
 categories: [Temple]
 ---
 In another incident Bhagwaan was always told about taking the chariot but one year the new officials didn't know the tradition and didn't inform Bhagwaan. The chariot was later found to be stuck and when the officials came to Bhagwaan to inform Him of this, the chariot began to move. 
- Please follow the [link](https://youtu.be/StZSFjIE4mc?si=osB4MG6n6rugJFjK) for the satsang in youtube.
+ 
+Please follow the [link](https://youtu.be/StZSFjIE4mc?si=osB4MG6n6rugJFjK) for the satsang in youtube.
