--- a/posts/Giriraj Ji's 60th birthday.qmd
+++ b/posts/Giriraj Ji's 60th birthday.qmd
@@ -1,8 +1,9 @@
 ---
-title: Giriraj Ji's 60th birthday
+title: 77 - Giriraj Ji's 60th birthday
 author: Giriraj Ji
 date: "07/01/2020"
 categories: [Temple]
 ---
 Sri Giriraj Ji came to Tiruvannamalai along with 25 of his family members to celebrate his 60th Birthday. Abhishekam was arranged at Arunachala Temple for Lord Annamalaiar. Bhagwan had also gone with them. When Abhihsekam was being performed to Arunachala entire group was seated in front of sanctum sanctorum. There were lots of other devotees who were having this Darsham from outside of sanctum. Bhagwan stood up and was continously Blessing all those who were outside revealing His identity as Arunachala Himself.
- Please follow the [link](https://youtu.be/xDEngUjFRT8?si=VgCaJ3J5cS5VJ1aF) for the satsang in youtube.
+ 
+Please follow the [link](https://youtu.be/xDEngUjFRT8?si=VgCaJ3J5cS5VJ1aF) for the satsang in youtube.
