--- a/posts/Hundi box and Bhagavan's first contribution.qmd
+++ b/posts/Hundi box and Bhagavan's first contribution.qmd
@@ -1,8 +1,9 @@
 ---
-title: Hundi box and Bhagavan's first contribution
+title: 71 - Hundi box and Bhagavan's first contribution
 author: NA
 date: "07/01/2020"
 categories: [Temple]
 ---
 Bhagwan would be the first one to drop coins in each Hundi box placed at the Temple premises and only then, others would follow suit. These boxes would then be placed across the Temple town to enable devotees contribute during the festival time. 
- Please follow the [link](https://youtu.be/pw6zlcrN77A?si=KSjoBjADtunYS-NF) for the satsang in youtube.
+ 
+Please follow the [link](https://youtu.be/pw6zlcrN77A?si=KSjoBjADtunYS-NF) for the satsang in youtube.
