sannadhi street added

--- a/posts/Bhagwan says "We are the puppets in the the hands of the supreme power".qmd
+++ b/posts/Bhagwan says "We are the puppets in the the hands of the supreme power".qmd
@@ -1,6 +1,6 @@
 ---
 title: 127 - Bhagwan says "We are the puppets in the the hands of the supreme power"
-author: Precious sayings of Bhagwan
+author: Mataji Devaki Ma
 date: "08/01/2020"
 categories: [Sannidhi street]
 ---
