--- a/posts/Devotees in Sannidhi street get blessed with a holy dip in the Kumbakonam tank with the sprinkling of water from His coconut shell. .qmd
+++ b/posts/Devotees in Sannidhi street get blessed with a holy dip in the Kumbakonam tank with the sprinkling of water from His coconut shell. .qmd
@@ -1,6 +1,6 @@
 ---
 title: 130 - Devotees in Sannidhi street get blessed with a holy dip in the Kumbakonam tank with the sprinkling of water from His coconut shell. 
-author: Blessings from Anandashram
+author: Devotees
 date: "08/01/2020"
 categories: [Blessings from Anandashram,Sannidhi street]
 ---
