--- a/posts/Ma had to come back to the house in 7 min from temple and the Baby holds on the Bhagwan's thumb.qmd
+++ b/posts/Ma had to come back to the house in 7 min from temple and the Baby holds on the Bhagwan's thumb.qmd
@@ -1,6 +1,6 @@
 ---
 title: 111 - Ma had to come back to the house in 7 min from temple and the Baby holds on the Bhagwan's thumb
-author: Story on Vinayak Chathurthi day
+author: Mataji Devaki Ma
 date: "07/01/2020"
 categories: [Sannidhi street , Ma & Bhagwan]
 ---
