--- a/posts/Smt. Hilda meets Yogi in Sannidhi street house.qmd
+++ b/posts/Smt. Hilda meets Yogi in Sannidhi street house.qmd
@@ -1,6 +1,6 @@
 ---
 title: 92 - Smt. Hilda meets Yogi in Sannidhi street house
-author: Smt Hilda Ji  expereince on meeting Bhagwan
+author: Hilda
 date: "07/01/2020"
 categories: [Hilda Charlton/Will and Jones , Sannidhi street]
 ---
