--- a/posts/Yogi Ramsuratkumar's involvement in building of memorial for Rajadurai nadar.qmd
+++ b/posts/Yogi Ramsuratkumar's involvement in building of memorial for Rajadurai nadar.qmd
@@ -1,6 +1,6 @@
 ---
 title: 39 - Yogi Ramsuratkumar's involvement in building of memorial for Rajadurai nadar
-author: 
+author: Rajamanickam Nadar, Chandraprakash
 date: "05/01/2020"
 categories: []
 ---
