--- a/posts/Bhagwan says 'thambi you cannot stay here, this is no lodge, you go and come later ' .qmd
+++ b/posts/Bhagwan says 'thambi you cannot stay here, this is no lodge, you go and come later ' .qmd
@@ -2,7 +2,7 @@
 title: 23 - Bhagwan says 'thambi you cannot stay here, this is no lodge, you go and come later ' 
 author: Sivarama Krishnan from Aruppukkotai
 date: "04/01/2020"
-categories: [sannidhi street,Conversation]
+categories: [Conversation, Sannidhi street]
 ---
 In another incident one Sivarama Krishnan takes Bhagwan for granted. Each time his family members used to come Bhagwan had permitted them to stay with him. So this time he thought he will also stay with Bhagwan and came to Sannidhi street determined to stay with Bhagwan. But then Bhagwan sternly and simply said 'thambi you cannot stay here, this is no lodge, you go and come later ' and easily put him off. This incident was so naturally narrated with humour that the whole place was reverberating with laughter. 
  
