--- a/posts/Bhagwan's solution to outbreak of cholera in Thiruvannamalai.qmd
+++ b/posts/Bhagwan's solution to outbreak of cholera in Thiruvannamalai.qmd
@@ -2,7 +2,7 @@
 title: 18 - Bhagwan's solution to outbreak of cholera in Thiruvannamalai
 author: Ganga Ramaswamy 
 date: "04/01/2020"
-categories: [Cholera in Thiruvannamalai. ,Sannidhi street]
+categories: [Sannidhi street]
 ---
 There was an outbreak of Cholera in Thiruvannamalai. The cause of this was lots of rotten red berry fruits were mixed with good ones and sold in Thiruvannamalai. Bhagwan asked his devotees to buy all the cart loads of the fruit, emptied all the bags of the fruits on the street and began stamping and smashing them. It looked as if there was a red carpet on the street. And ofcourse the disease was now wiped  out by Bhagwan. 
  
