--- a/posts/Devotees in Sannidhi street get blessed with a holy dip in the Kumbakonam tank with the sprinkling of water from His coconut shell. .qmd
+++ b/posts/Devotees in Sannidhi street get blessed with a holy dip in the Kumbakonam tank with the sprinkling of water from His coconut shell. .qmd
@@ -2,7 +2,7 @@
 title: 130 - Devotees in Sannidhi street get blessed with a holy dip in the Kumbakonam tank with the sprinkling of water from His coconut shell. 
 author: Devotees
 date: "08/01/2020"
-categories: [Blessings from Anandashram,Sannidhi street]
+categories: [Sannidhi street]
 ---
 Bhagwan narrated the incident of 1980 when many devotees from Tapovanam and other places had assembled at Sannidhi Street House. A man entered and offered Bhagwan, Rama fruit which he had brought from Anand ashram (Papa Ramdas). Bhagwan was elated with joy that He had received the blessings of His Guru. He said that He would pray to His Father to bless all of them assembled there, just as He would bless all people at Anandashram.
 That day was the special Mahamagam day, when large numbers of people would take a dip in the holy Mahamagam tank at Kumbakonam.
