--- a/posts/Raman and his brother is hungry but Bhagwan has allthe idlies..qmd
+++ b/posts/Raman and his brother is hungry but Bhagwan has allthe idlies..qmd
@@ -2,7 +2,7 @@
 title: 20 - Raman and his brother is hungry but Bhagwan has allthe idlies.
 author: Raman and his brother.
 date: "04/01/2020"
-categories: [ sannidhi street ]
+categories: [Sannidhi street]
 ---
 Raman and his brother go to Bhagwan for darshan. They are very hungry. Just then a man selling idlis in cart comes by. Bhagwan takes a plate of idlis. Raman and his brother think it is for them. But Bhagwan asks Raman to pay for it and he starts to eat all the idlis himself. And the wonder of wonder is no sooner Raman paid for the idlis, he and his brother both were feeling full as though they had consumed a stomach full of idlis and sambar. This leela where Bhagwan eats and Raman and his brother feel full reminds us of a Krishna leela.
  
