--- a/posts/Yogi Ramsuratkumar's involvement in building of memorial for Rajadurai nadar.qmd
+++ b/posts/Yogi Ramsuratkumar's involvement in building of memorial for Rajadurai nadar.qmd
@@ -2,7 +2,7 @@
 title: 39 - Yogi Ramsuratkumar's involvement in building of memorial for Rajadurai nadar
 author: Rajamanickam Nadar, Chandraprakash
 date: "05/01/2020"
-categories: []
+categories: [Sannidhi street]
 ---
 It is said in the upanishad, when u know THAT - the ultimate truth, you know about everything else also. This incident shows how yogiji knew about so manythings even though He calls himself a dirty beggar.
 Rajmanika Nadar &Rajdurai Nadar were a great devotee of Bhagwan insisted on purchasing a house at Sannathi street for Bhagwan ..Yogiji had suffered a lot at the hands of hooligans …to which he agreed.
