--- a/posts/What have you studied Bhagwan?.qmd
+++ b/posts/What have you studied Bhagwan?.qmd
@@ -2,7 +2,7 @@
 title: 18 - What have you studied Bhagwan?
 author: Three  ladies of a family.  
 date: "04/01/2020"
-categories: [Conversation, sannidhi street]
+categories: [Conversation, Sannidhi street]
 ---
 Three  ladies of a family offer to clean Bhagwan's hall and backyard. Surprise of surprises Bhagwan permits them. One of them is an MA and Bhagwan tests  saying she is so educated and how she could do cleaning.  Then one of them ask Bhagwan upto what extent he is educated. To this Bhagwan laughs, a big laughter and then says he has studied only 'Om Sri Ram Jai Ram Jai Jai Ram'. 
  
